--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc -p tsconfig.json",
         "start": "node --loader ts-node/esm src/index.ts",
         "dev": "node --loader ts-node/esm src/index.ts",
-        "generate:docs": "pnpm build && node dist/scripts/generate-docs.js"
+        "generate:docs": "node --loader ts-node/esm scripts/generate-docs.ts"
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.20.1",
