--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
         "resolveJsonModule": true,
         "skipLibCheck": true
     },
-    "include": ["src"],
+    "include": ["src/**/*"],
     "exclude": ["src/docs/**/*.json", "dist/**"]
 }
